<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/s_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/s_dot"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="55sp"/>

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/heading"
                style="@style/HeadingTheme"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pan_number_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                app:errorEnabled="true">

                <EditText
                    android:id="@+id/pan_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters"
                    android:maxLines="1"
                    android:hint="@string/pan_number_input" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    />

                <TextView

                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_invalidate"
                    android:textColor="@color/red"
                    android:visibility="invisible"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="8"
                android:padding="10dp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/day"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/day_input"
                        android:layout_width="60dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="2"
                        android:hint="@string/day_input" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/month"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/month_input"
                        android:layout_width="80dp"
                        android:layout_weight="2"
                        android:inputType="number"
                        android:maxLength="2"
                        android:layout_height="wrap_content"
                        android:hint="@string/month_input" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/year"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:layout_marginTop="8dp"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/year_input"
                        android:layout_width="100dp"
                        android:layout_weight="4"
                        android:inputType="number"
                        android:maxLength="4"
                        android:layout_height="wrap_content"
                        android:hint="@string/year_input" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/description" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/next"
                android:onClick="onClickNext"
                android:enabled="false" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/cancel"
                style="@style/Widget.Material3.Button.TextButton"
                android:textSize="15sp"
                android:onClick="finishActivity"
                />



        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>